Kata 1 ---Kata #1 was resolved with map