@@ -1,12 +1,13 @@
 package katas;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import model.Movie;
 import util.DataUtil;
 
+import javax.swing.plaf.synth.SynthOptionPaneUI;
 import java.util.List;
 import java.util.Map;
+import java.util.Spliterator;
+import java.util.stream.Collectors;
 
 /*
     Goal: use map() to project an array of videos into an array of {id, title}-pairs
@@ -14,9 +15,21 @@ import java.util.Map;
     Output: List of ImmutableMap.of("id", "5", "title", "Bad Boys")
 */
 public class Kata1 {
-    public static List<Map> execute() {
+    public static List<Map<Integer, String>> execute() {
         List<Movie> movies = DataUtil.getMovies();
 
-        return ImmutableList.of(ImmutableMap.of("id", 4, "title", "Bad Boys"));
+        System.out.println("-------------------------------------");
+        System.out.println("|          MOVIES CORN24            |");
+        System.out.println("-------------------------------------");
+        List<Map<Integer, String>> arrayMovies = movies
+                .stream()
+                .map(movie -> Map.of(
+                        movie.getId(),
+                        movie.getTitle()))
+                .collect(Collectors.toList());
+
+        System.out.println("You can watch this movies for now:");
+        System.out.println(arrayMovies);
+        return arrayMovies;
     }
 }
